# usps-v3

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/usps_v3/: __init__.py  addresses.py  auth.py  client.py  exceptions.py  labels.py  locations.py  prices.py  standards.py  tracking.py
tests/: conftest.py  test_addresses.py  test_auth.py  test_client.py  test_labels.py  test_locations.py  test_prices.py  test_standards.py  test_tracking.py
