[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "usps-v3"
version = "1.0.0"
description = "Python SDK for USPS Web Tools v3 REST API — OAuth 2.0, address validation, tracking, labels, prices"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "James Lambert", email = "james@revasser.nyc" }]
keywords = ["usps", "shipping", "address-validation", "tracking", "labels", "postal", "api"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial :: Point-Of-Sale",
]
dependencies = ["httpx>=0.24.0"]

[project.urls]
Homepage = "https://revaddress.com"
Documentation = "https://revaddress.com/docs"
Repository = "https://github.com/revereveal/usps-v3"
Issues = "https://github.com/revereveal/usps-v3/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/usps_v3"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-httpx>=0.21", "respx>=0.20", "ruff>=0.3"]
